--- a/controller/CNC Control/CNC Control.csproj
+++ b/controller/CNC Control/CNC Control.csproj
@@ -68,6 +68,9 @@
     <Compile Include="Magneto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="HectorApp.resx">
+      <DependentUpon>HectorApp.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
